# Roboperation

./: README.md
src/roboperation/: CMakeLists.txt  get_data.py  package.xml  read_data.py  roboperation_example_controller_plugin.xml  test_motion.py  test_motion2.py  test_motion3.py  test_motion4.py
src/roboperation/cfg/: compliance_param.cfg
src/roboperation/config/: example_controllers.yaml
src/roboperation/include/roboperation/: ArmControl.h  roboperation_example_controller.h  roboperation_psuedo_inversion.h
src/roboperation/launch/: arm_control.launch  launch_panda.launch  roboperation_controller.launch
src/roboperation/msg/: ArmStatePose.msg
src/roboperation/src/: ArmControl.cpp  cartesian_controller_copy.cpp  main.cpp  roboperation_example_controller.cpp
src/roboperation_gripper/: CMakeLists.txt  package.xml
src/roboperation_gripper/launch/: roboperation_gripper.launch
src/roboperation_gripper/src/: roboperation_gripper.cpp  roboperation_gripper_node.cpp
